fix approval overlap

--- a/app/tray/Account/Requests/TransactionRequest/TokenSpend/style/index.styl
+++ b/app/tray/Account/Requests/TransactionRequest/TokenSpend/style/index.styl
@@ -188,11 +188,11 @@
     position absolute
     left 0
     top 0
-    bottom 12px
+    bottom 50px
     display flex
     justify-content center
     align-items center
-    padding-left 20px
+    padding-left 10px
     font-size 16px
     color var(--good)
 
